# shadow_on_earth

./: CMakeLists.txt  README.md  a.out  calculator.cpp  input.txt  matrix_multiplication.cpp  test.txt  try.cpp  useful_functions.cpp  useful_functions.h
c++_version/: calculator.cpp  input.txt  output.txt  test.txt
c++_version/matrix_multiplication/: matrix.cpp
